# catherine_discordbot

discordchatbot/: main.py  pyproject.toml
discordchatbot/agents/: item_extractor.py
discordchatbot/utils/: utils.py
